@@ -41,9 +41,9 @@ guava.version=11.0
 jersey-core.version=1.8
 hadoop-core.version=1.0.4
 hadoop-test.version=1.0.4
-hadoop-common.version=2.4.0
-hadoop-hdfs.version=2.4.0
-hadoop-mapreduce.version=2.4.0
+hadoop-common.version=2.6.0
+hadoop-hdfs.version=2.6.0
+hadoop-mapreduce.version=2.6.0
 hbase94.version=0.94.1
 hbase95.version=0.96.0-${hbase.hadoop.version}
 hsqldb.version=1.8.0.10
@@ -95,3 +95,6 @@ snappy-java.version=1.1.0.1
 tez.version=0.7.0-SNAPSHOT
 parquet-pig-bundle.version=1.2.3
 snappy.version=0.2
+leveldbjni.version=1.8
+curator.version=2.6.0
+htrace.version=3.0.4
